--- a/style.css
+++ b/style.css
@@ -52,18 +52,22 @@ body {
   color: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
 }
+
 .profile-icon {
   margin-right: 2rem;
-  color: white;
-  font-size: 1.5rem;
+  color: #fff;
+  font-size: 1.3rem;
   cursor: pointer;
   padding: 0.5rem;
   border-radius: 50%;
   transition: all 0.3s ease;
 }
+
 .profile-icon:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+
 /* Hero Section */
 .hero {
   width: 100%;
@@ -88,11 +92,11 @@ body {
   pointer-events: none;
 }
 .hero-title {
-  font-size: 3.5rem;
+  font-size: 3rem;
   font-weight: 700;
   color: #fff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 .hero-content {
   position: relative;
@@ -102,9 +106,12 @@ body {
 }
 .hero-description {
   color: #fff;
-  font-size: 1.1rem;
-  line-height: 1.6;
+  font-size: 0.8rem;
+  line-height: 1.8;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  word-break: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 /* Epispdes Section */
 .episodes {
@@ -171,4 +178,79 @@ body {
 .episode-info p {
   color: #999;
   font-size: 0.8rem;
+}
+
+/* Characters Section */
+.characters {
+  padding: 2rem 0;
+}
+
+.character-cards {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+}
+
+.character-card {
+  width: 330px;
+  height: 330px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  backdrop-filter: blur(5px);
+  position: relative;
+}
+
+.character-card:hover {
+  transform: translateY(-10px);
+  background: rgba(255, 255, 255, 0.15);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+.character-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.character-info {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1.5rem;
+  background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.5), transparent);
+  color: #fff;
+}
+
+.character-info h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+.character-info p {
+  color: #ccc;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.character-description {
+  font-size: 0.75rem;
+  line-height: 1.1;
+  color: #aaa;
+  display: none;
+  transition: all 0.3s ease;
+}
+
+.character-card:hover .character-description {
+  display: block;
+} 
+
+.section-divider{
+  width: 100%;
+  height: 1.1px;
+  background: rgba(255, 255, 255, 0.1);
+  margin: 2rem 0;
 }
